# pinned_ref

Email_Server_Rust/zero2prod/: Cargo.toml  Dockerfile  spec.yaml
Email_Server_Rust/zero2prod/configuration/: base.yaml  production.yaml
Email_Server_Rust/zero2prod/migrations/: 20220601152833_make_status_not_null_in_subscriptions.sql  20220601153024_create_subscription_tokens_table.sql  20220603173955_create_users_table.sql  20220605234912_seed_user.sql  20220608154835_create_idempotency_table.sql  20220609142314_relax_null_checks_on_idempotency.sql  20220611163850_create_newsletter_issues_table.sql  20220611164310_create_issue_delivery_queue_table.sql
Email_Server_Rust/zero2prod/scripts/: init_db.sh  init_redis.sh
Email_Server_Rust/zero2prod/src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  startup.rs
Email_Server_Rust/zero2prod/src/authentication/: middleware.rs  password.rs
Email_Server_Rust/zero2prod/src/domain/: subscriber_email.rs  subscriber_name.rs
Email_Server_Rust/zero2prod/src/idempotency/: persistence.rs
Email_Server_Rust/zero2prod/src/routes/: newsletters.rs  subscriptions.rs
Email_Server_Rust/zero2prod/src/routes/admin/: dashboard.rs
Email_Server_Rust/zero2prod/src/routes/admin/newsletter/: get.rs  post.rs
Email_Server_Rust/zero2prod/src/routes/admin/password/: get.rs  post.rs
Email_Server_Rust/zero2prod/src/routes/home/: home.html
Email_Server_Rust/zero2prod/src/routes/login/: get.rs  login.html  post.rs
Email_Server_Rust/zero2prod/tests/: health_check.rs
Email_Server_Rust/zero2prod/tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
Instapaper_Integration_Rust/: Cargo.toml
Instapaper_Integration_Rust/reference/: card_style.css  search_index.json  style.css
Instapaper_Integration_Rust/src/: insta_client.rs  lib.rs  main.rs
PinnedRef_ReactNative/: .gitignore  app.json  package-lock.json  package.json
PinnedRef_ReactNative/android/: settings.gradle
PinnedRef_ReactNative/android/app/: _BUCK  build.gradle
PinnedRef_ReactNative/android/app/src/debug/java/com/pinnedref/: ReactNativeFlipper.java
PinnedRef_ReactNative/android/app/src/main/: AndroidManifest.xml
PinnedRef_ReactNative/android/app/src/main/java/com/pinnedref/: MainActivity.java  MainApplication.java
PinnedRef_ReactNative/android/app/src/main/java/com/pinnedref/newarchitecture/: MainApplicationReactNativeHost.java
PinnedRef_ReactNative/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
PinnedRef_ReactNative/android/app/src/main/res/values/: strings.xml
PinnedRef_ReactNative/ios/: Podfile
PinnedRef_ReactNative/ios/PinnedRef/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
PinnedRef_ReactNative/ios/PinnedRef.xcodeproj/: project.pbxproj
PinnedRef_ReactNative/ios/PinnedRef.xcodeproj/xcshareddata/xcschemes/: PinnedRef.xcscheme
PinnedRef_ReactNative/ios/PinnedRef.xcworkspace/: contents.xcworkspacedata
PinnedRef_ReactNative/ios/PinnedRefTests/: PinnedRefTests.m
PinnedRef_ReactNative/src/: App.provider.tsx  App.tsx  types.ts
PinnedRef_ReactNative/src/components/: EntryArticle.tsx  ParaCard.tsx  RowDisplay.tsx
PinnedRef_ReactNative/src/screens/: ArticleList.screen.tsx  MultiArticle.screen.tsx  SingleArticle.screen.tsx
(+2 files in other folders)
