[package]
name = "instapaper"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
oauth1 = "1.0.0"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.5.5"
url = "2.2.2"
dotenv = "0.15.0"
rand = "0.8.5"