[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
serde_urlencoded = "0.7.1"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

[dependencies]
actix-web-lab = "0.15"
serde_json = "1"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
htmlescape = "0.3"
urlencoding = "2"
argon2 = { version = "0.3", features = ["std"] }
base64 = "0.13"
anyhow = "1"
thiserror = "1"
rand = { version = "0.8", features=["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
validator = "0.14"
claim = "0.5"
unicode-segmentation = "1"
serde-aux = "3"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }



